little lemon project setup

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Little Lemon</title>
+    <title>Little Lemon Restaurant</title>
     <meta
       name="description"
-      content="Based in Chicago, Illinois, Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist"
+      content="Little Lemon estaurant website, Mediterranean restaurant, traditional recipes, restaurant based in chicago!"
     />
-    <meta name="author" content="Little lemon restaurant" />
+    <meta name="author" content="Assefa Altaye" />
+    <meta name="author" content="Little Lemon Restaurant" />
 
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <header>
-      <img src="img/Asset 14@4x.png" alt="recycle" />
+      <div class="logo">
+        <img src="img/Asset 14@4x.png" alt="logo" width="75%" />
+      </div>
     </header>
     <nav>
       <ul>
