--- a/index.html
+++ b/index.html
@@ -10,72 +10,97 @@
     />
     <meta name="author" content="Assefa Altaye" />
     <meta name="author" content="Little Lemon Restaurant" />
-
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <header>
-      <div class="logo">
-        <img src="img/Asset 14@4x.png" alt="logo" width="75%" />
-      </div>
+      <img src="img/Asset 16@4x.png" alt="logo" />
     </header>
     <nav>
       <ul>
-        <li>Home</li>
-        <li>Menu</li>
-        <li>Book</li>
-        <li>About</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Book</a></li>
+        <li><a href="#">About</a></li>
       </ul>
     </nav>
     <main>
+      <div class="container">
+        <section>
+          <article class="hero">
+            <h1>30% off This Weekend</h1>
+            <p>
+              Enjoy the Weekend with your family and beloved ones, with a 30%
+              discount on all dishes for the weekend. <br />
+              You can order from our app too!
+            </p>
+          </article>
+        </section>
+      </div>
+
       <section>
         <article>
-          <h1>Heading 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsam
-            explicabo modi minus? Nemo fuga, molestias facere corporis amet
-            consequatur doloremque a aliquam dolore doloribus similique in.
-            Placeat, minus eveniet!
-          </p>
-        </article>
-      </section>
-      <section>
-        <article>
-          <h2>Section 1</h2>
+          <h2>Our New Menu</h2>
+          <img src="img/new menu.png" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             adipisci doloribus sapiente ab? Error ipsa eveniet architecto velit
             impedit, ut quia similique non nihil natus ab delectus vero,
             dignissimos incidunt.
           </p>
+          <ul>
+            <li><a href="index.html">Our Menu</a></li>
+          </ul>
         </article>
         <article>
-          <h2>Section 2</h2>
+          <h2>Book a table</h2>
+          <img src="img/book table.jpg" alt="" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             adipisci doloribus sapiente ab? Error ipsa eveniet architecto velit
             impedit, ut quia similique non nihil natus ab delectus vero,
             dignissimos incidunt.
           </p>
+          <ul>
+            <li><a href="index.html">Reserve Now</a></li>
+          </ul>
         </article>
         <article>
-          <h2>Section 3</h2>
+          <h2>Opening Hours</h2>
+          <img src="img/open hours.png" alt="" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             adipisci doloribus sapiente ab? Error ipsa eveniet architecto velit
             impedit, ut quia similique non nihil natus ab delectus vero,
             dignissimos incidunt.
           </p>
+          <ul>
+            <li>Mon-Fri: 2pm-10pm</li>
+            <li>Sat: 2pm-11pm</li>
+            <li>Sun: 2pm-9pm</li>
+          </ul>
         </article>
       </section>
     </main>
     <footer>
       <div>
-        <img src="logo.png" alt="logo image" />
+        <img
+          src="img/Asset 20@4x.png"
+          alt="footer logo"
+          width="100"
+          height="150"
+        />
       </div>
       <div>
-        <p>Copyright Little Lemon</p>
+        <hr />
+        <p>&copy; Little Lemon Restaurant | by Assefa Altaye</p>
       </div>
     </footer>
   </body>
