--- a/index.html
+++ b/index.html
@@ -56,30 +56,31 @@
             dignissimos incidunt.
           </p>
           <ul>
-            <li><a href="index.html">Our Menu</a></li>
+            <li><a href="index.html">See More</a></li>
           </ul>
         </article>
         <article>
-          <h2>Book a table</h2>
+          <h2>Reserve a table</h2>
           <img src="img/book table.jpg" alt="" />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            adipisci doloribus sapiente ab? Error ipsa eveniet architecto velit
-            impedit, ut quia similique non nihil natus ab delectus vero,
-            dignissimos incidunt.
+            We care about your time! <br />
+            Make the most of your dining experience and focus on the people you
+            are spending time with. We will send you every information about
+            your reservation and You won't have to waste time choosing where to
+            go or waiting in line once you get here.
           </p>
           <ul>
-            <li><a href="index.html">Reserve Now</a></li>
+            <li><a href="index.html" class="button-link">Reserve Now</a></li>
           </ul>
         </article>
         <article>
           <h2>Opening Hours</h2>
           <img src="img/open hours.png" alt="" />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             adipisci doloribus sapiente ab? Error ipsa eveniet architecto velit
             impedit, ut quia similique non nihil natus ab delectus vero,
-            dignissimos incidunt.
+            dignissimos incidunt. -->
           </p>
           <ul>
             <li>Mon-Fri: 2pm-10pm</li>
