--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
           <h2>Our New Menu</h2>
           <img src="img/new menu.png" />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            adipisci doloribus sapiente ab? Error ipsa eveniet architecto velit
-            impedit, ut quia similique non nihil natus ab delectus vero,
-            dignissimos incidunt.
+            <!-- Our menu offers something to suit every taste and occasion. -->
+            Are you craving a hearty pasta dish, a fresh Mediterranean salad, or
+            a succulent grilled meat platter? Explore our culinary journey and
+            experience the essence of Italian, Greek, and Turkish gastronomy
+            with every bite.
           </p>
           <ul>
-            <li><a href="index.html">See More</a></li>
+            <li><a href="#" class="button-link">See Menu</a></li>
           </ul>
         </article>
         <article>
@@ -77,10 +78,8 @@
           <h2>Opening Hours</h2>
           <img src="img/open hours.png" alt="" />
           <p>
-            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            adipisci doloribus sapiente ab? Error ipsa eveniet architecto velit
-            impedit, ut quia similique non nihil natus ab delectus vero,
-            dignissimos incidunt. -->
+            Little Lemon Restaurant is open 7 days a week, except for public
+            holidays.
           </p>
           <ul>
             <li>Mon-Fri: 2pm-10pm</li>
